# core

./: .gitignore  CMakeLists.txt
arith/: CMakeLists.txt
arith/cpp/: ArithConstruct.cpp  CMakeLists.txt  Lowering.cpp  Ops.cpp  Transform.cpp
arith/include/arith/: CMakeLists.txt  Lowering.h  Ops.h  Ops.td  Transform.h
arith/lib/: ArithConstruct.cpp
arith/rust/: Cargo.toml
arith/rust/src/: lib.rs  lowering.rs  ops.rs  transform.rs
arith/test/: .lit_test_times.txt  lit.cfg.py
arith/test/lit/: arithmetic.mlir  bitwise.mlir  casts.mlir  comparison.mlir  constant.mlir
arith/test/lit/Output/: arithmetic.mlir.script  bitwise.mlir.script  casts.mlir.script  comparison.mlir.script  constant.mlir.script
arith/test/lit/lowering/: arithmetic_to_llvm.mlir  bitwise_to_llvm.mlir  casts_to_llvm.mlir
arrays/: CMakeLists.txt
arrays/cpp/: CMakeLists.txt  Lowering.cpp  Types.cpp
arrays/include/arrays/: CMakeLists.txt  Lowering.h  Ops.h  Ops.td  Types.h  Types.td
arrays/lib/: ArraysConstruct.cpp  Ops.cpp
arrays/rust/: Cargo.toml
arrays/rust/src/: lib.rs  lowering.rs  ops.rs  types.rs
arrays/test/: .lit_test_times.txt  lit.cfg.py
arrays/test/lit/: arrays.mlir
arrays/test/lit/Output/: arrays.mlir.script
comptime/cpp/: CMakeLists.txt  ComptimeStep.cpp
comptime/test/: lit.cfg.py
comptime/test/lit/: branch_elim.mlir  comptime_call.mlir  comptime_infra.mlir  comptime_memory.mlir  constant_fold.mlir
enums/: CMakeLists.txt
enums/cpp/: EnumsConstruct.cpp  Types.cpp
enums/include/enums/: CMakeLists.txt  Lowering.h  Ops.h  Ops.td  Types.h  Types.td
enums/lib/: CMakeLists.txt  Lowering.cpp  Ops.cpp
enums/rust/: Cargo.toml
enums/rust/src/: lib.rs  lowering.rs  ops.rs  types.rs
enums/test/: CMakeLists.txt  lit.cfg.py
enums/test/lit/: enums.mlir
errors/: CMakeLists.txt
errors/cpp/: CMakeLists.txt  Ops.cpp
errors/include/errors/: CMakeLists.txt  Lowering.h  Ops.h  Ops.td  Types.h  Types.td
errors/lib/: ErrorsConstruct.cpp  Lowering.cpp  Types.cpp
errors/rust/: Cargo.toml
errors/rust/src/: lib.rs  lowering.rs  ops.rs  types.rs
errors/test/: .lit_test_times.txt  lit.cfg.py
errors/test/lit/: errors.mlir
flow/: CMakeLists.txt
flow/cpp/: CMakeLists.txt  FlowConstruct.cpp  Ops.cpp
flow/include/flow/: CMakeLists.txt  Lowering.h  Ops.h  Ops.td
flow/lib/: Lowering.cpp  Ops.cpp
flow/rust/: Cargo.toml
flow/rust/src/: lib.rs  lowering.rs  ops.rs
flow/test/: .lit_test_times.txt  lit.cfg.py
flow/test/lit/: control_flow.mlir
generics/: CMakeLists.txt
generics/cpp/: CMakeLists.txt  GenericSpecializer.cpp  GenericsConstruct.cpp  Lowering.cpp
generics/include/generics/: CMakeLists.txt  GenericSpecializer.h  Lowering.h  Ops.h  Ops.td  Types.h  Types.td
generics/lib/: GenericsConstruct.cpp  Ops.cpp  Types.cpp
generics/rust/: Cargo.toml
generics/rust/src/: lib.rs  ops.rs  transform.rs  types.rs
generics/test/: lit.cfg.py
generics/test/lit/: generic_apply.mlir  generic_specialize.mlir  sema_specialize.mlir  type_param.mlir
memory/: CMakeLists.txt
memory/cpp/: Ops.cpp
memory/include/memory/: CMakeLists.txt  Lowering.h  Ops.h  Ops.td  Types.h  Types.td
memory/lib/: CMakeLists.txt  Lowering.cpp  MemoryConstruct.cpp  Types.cpp
memory/rust/: Cargo.toml
memory/rust/src/: lib.rs  lowering.rs  ops.rs  types.rs
memory/test/: .lit_test_times.txt  CMakeLists.txt  lit.cfg.py
memory/test/lit/: memory.mlir
optionals/: CMakeLists.txt
optionals/cpp/: CMakeLists.txt  OptionalsConstruct.cpp
optionals/include/optionals/: CMakeLists.txt  Lowering.h  Ops.h  Ops.td  Types.h  Types.td
optionals/lib/: Lowering.cpp  Ops.cpp  Types.cpp
optionals/rust/: Cargo.toml
optionals/rust/src/: lib.rs  lowering.rs  ops.rs  types.rs
optionals/test/: .lit_test_times.txt  lit.cfg.py
optionals/test/lit/: optionals.mlir
slices/: CMakeLists.txt
slices/cpp/: Lowering.cpp
slices/include/slices/: CMakeLists.txt  Lowering.h  Ops.h  Ops.td  Types.h  Types.td
slices/lib/: CMakeLists.txt  Ops.cpp  SlicesConstruct.cpp  Types.cpp
slices/rust/: Cargo.toml
slices/rust/src/: lib.rs  lowering.rs  ops.rs  types.rs
slices/test/: .lit_test_times.txt  lit.cfg.py
slices/test/lit/: slices.mlir
structs/: CMakeLists.txt
structs/cpp/: Ops.cpp  Types.cpp
structs/include/structs/: CMakeLists.txt  Lowering.h  Ops.h  Ops.td  Types.h  Types.td
structs/lib/: CMakeLists.txt  Lowering.cpp  StructsConstruct.cpp
structs/rust/: Cargo.toml
structs/rust/src/: lib.rs  lowering.rs  ops.rs  types.rs
structs/test/: .lit_test_times.txt  lit.cfg.py
structs/test/lit/: structs.mlir
test/: CMakeLists.txt
test/cpp/: TestRunnerGenerator.cpp
test/include/test/: CMakeLists.txt  Lowering.h  Ops.h  Ops.td  TestRunnerGenerator.h
test/lib/: CMakeLists.txt  Lowering.cpp  Ops.cpp  TestConstruct.cpp
test/runtime/: CMakeLists.txt  cir_test.c
test/rust/: Cargo.toml
test/rust/src/: lib.rs  lowering.rs  ops.rs  transform.rs
test/test/: .lit_test_times.txt  CMakeLists.txt  lit.cfg.py
test/test/lit/: test_ops.mlir
traits/: CMakeLists.txt
traits/cpp/: TraitsConstruct.cpp
traits/include/traits/: CMakeLists.txt  Lowering.h  Ops.h  Ops.td  Types.h  Types.td
traits/lib/: CMakeLists.txt  Lowering.cpp  Ops.cpp  Types.cpp
traits/rust/: Cargo.toml
traits/rust/src/: lib.rs  lowering.rs  ops.rs  transform.rs  types.rs
traits/test/: lit.cfg.py
traits/test/lit/: existential_type.mlir  witness_table.mlir
unions/: CMakeLists.txt
unions/cpp/: Lowering.cpp  Ops.cpp  Types.cpp  UnionsConstruct.cpp
unions/include/unions/: CMakeLists.txt  Lowering.h  Ops.h  Ops.td  Types.h  Types.td
unions/lib/: CMakeLists.txt
unions/rust/: Cargo.toml
unions/rust/src/: lib.rs  lowering.rs  ops.rs  types.rs
unions/test/: lit.cfg.py
unions/test/lit/: unions.mlir
vwt/: CMakeLists.txt
vwt/cpp/: CMakeLists.txt
vwt/include/vwt/: CMakeLists.txt  Lowering.h  Ops.h  Ops.td
vwt/lib/: Lowering.cpp  Ops.cpp  VWTConstruct.cpp
vwt/rust/: Cargo.toml
vwt/rust/src/: lib.rs  lowering.rs  ops.rs  transform.rs
vwt/test/: lit.cfg.py
vwt/test/lit/: vwt_ops.mlir
(+29 files in other folders)
