[package]
name = "cot-arrays"
version = "0.1.0"
edition = "2021"
description = "CIR arrays construct: fixed-size array type with element access ops."

[features]
default = []
codegen = ["mlif/codegen", "dep:cranelift-codegen", "dep:cranelift-frontend"]

[dependencies]
mlif = { workspace = true }
cranelift-codegen = { workspace = true, optional = true }
cranelift-frontend = { workspace = true, optional = true }
