[package]
name = "cot-enums"
version = "0.1.0"
edition = "2021"
description = "CIR enums construct: named enumeration type with integer-backed variants."

[features]
default = []
codegen = ["mlif/codegen", "dep:cranelift-codegen", "dep:cranelift-frontend"]

[dependencies]
mlif = { workspace = true }
cranelift-codegen = { workspace = true, optional = true }
cranelift-frontend = { workspace = true, optional = true }
