[package]
name = "cot-structs"
version = "0.1.0"
edition = "2021"
description = "CIR structs construct: named struct types with field access and initialization."

[features]
default = []
codegen = ["mlif/codegen", "dep:cranelift-codegen", "dep:cranelift-frontend"]

[dependencies]
mlif = { workspace = true }
cranelift-codegen = { workspace = true, optional = true }
cranelift-frontend = { workspace = true, optional = true }
