[package]
name = "cot-test"
version = "0.1.0"
edition = "2021"
description = "CIR test construct: assert and test_case ops with test runner generation."

[features]
default = []
codegen = ["mlif/codegen", "dep:cranelift-codegen", "dep:cranelift-frontend"]

[dependencies]
mlif = { workspace = true }
cranelift-codegen = { workspace = true, optional = true }
cranelift-frontend = { workspace = true, optional = true }
