[package]
name = "cot-unions"
version = "0.1.0"
edition = "2021"
description = "CIR unions construct: tagged union type with variant initialization and payload access."

[features]
default = []
codegen = ["mlif/codegen", "dep:cranelift-codegen", "dep:cranelift-frontend"]

[dependencies]
mlif = { workspace = true }
cranelift-codegen = { workspace = true, optional = true }
cranelift-frontend = { workspace = true, optional = true }
